2005-06-09 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Restore Default Register Groups" action.
	* ICDebugTarget.java
	* CRegisterManager.java
	* CDebugTarget.java

2005-06-07 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Support fo the "Edit Register Group" action.
	* ICDebugTarget.java
	* IPersistableRegisterGroup.java
	* CRegisterManager.java
	* CDebugTarget.java
	* CRegisterGroup.java

2005-06-07 Mikhail Khodjaiants
	The endianness flag is not chached.
	* CDebugTarget.java

2005-06-06 Mikhail Khodjaiants
	Bug 98594: Unable to set address breakpoints.
	* CBreakpointManager.java

2005-05-24 Mikhail Khodjaiants
	Bug 88558: run-to-line not thread oriented.
	The IRunTo* and IJumpTo* interfaces moved to ICStackFrame.
	* ICDebugTarget.java
	* ICStackFrame.java
	* CDebugTarget.java
	* CStackFrame.java
	* CThread.java

2005-05-20 Mikhail Khodjaiants
	Bug 94139: User-defined register groups.
	Added API and group serialization.
	* ICDTLaunchConfigurationConstants.java
	- ICRegisterManager.java
	* ICDebugTarget.java
	+ IPersistableRegisterGroup.java
	+ IRegisterDescriptor.java
	* CRegisterManager.java
	* InternalDebugCoreMessages.properties
	* CDebugTarget.java
	* CoreModelMessages.properties
	* CRegister.java
	+ CRegisterDescriptor.java
	* CRegisterGroup.java

2005-05-12 Mikhail Khodjaiants
	Bug 94905: Error examining structure contents in debugger.
	The structure's elements should inherit the enablement flag from parents.
	* CVariable.java

2005-04-25 Mikhail Khodjaiants
	Update the source search path of the underlyuing debugger when the source 
	containers are changed.
	+ ISourceLookupChangeListener.java
	* CDebugTarget.java
	* CSourceLookupParticipant.java

2005-04-27 Alain Magloire
	Change in the CDI interface
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDISourceManagent.java

2005-04-25 Mikhail Khodjaiants
	Added the new source container type (CDirectorySourceContainer) to provide 