@@ -1,5 +1,10 @@
 2005-06-09 Mikhail Khodjaiants
 	Bug 94139: User-defined register groups.
+	Don't save the list of registers for default groups.
+	* CRegisterManager.java
+
+2005-06-09 Mikhail Khodjaiants
+	Bug 94139: User-defined register groups.
 	Support fo the "Restore Default Register Groups" action.
 	* ICDebugTarget.java
 	* CRegisterManager.java
